--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -20,7 +20,10 @@
     <%= form.label :admission_number %>
     <%= form.text_field :admission_number, id: :student_admission_number %>
   </div>
-
+  <div class="field">
+    <%= form.label :Dormitory %>
+        <%= collection_select(:student, :dormitory_id, Dormitory.all, :id, :name_with_state) %>
+  </div>
   <div class="actions">
     <%= form.submit %>
   </div>
