--- a/app/views/exams/_form.html.erb
+++ b/app/views/exams/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= form.label :date %>
-    <%= form.text_field :date, id: :exam_date %>
+    <%= form.datetime_local_field :date, id: :exam_date %>
   </div>
 
   <div class="actions">
