--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :due_date %>
-    <%= form.text_field :due_date, id: :assignment_due_date %>
+    <%= form.datetime_local_field :due_date, id: :assignment_due_date %>
   </div>
 
   <div class="actions">
